--- a/1.0-Observability_Bad_SSL/Observability_Bad_SSL.yaml
+++ b/1.0-Observability_Bad_SSL/Observability_Bad_SSL.yaml
@@ -1,6 +1,6 @@
 ---
 - name: AS3 Deploy Application Internal Cert
-  hosts: lb
+  hosts: f5s
   connection: httpapi
   gather_facts: false
 
@@ -10,15 +10,18 @@
     ansible_httpapi_validate_certs: no
     ansible_httpapi_port: "443"
     ansible_httpapi_password: "{{ ansible_password }}"
-    as3_tenant_name: "CustomerDemo"
-    F5_VIP_Name: My-Demo-App-SSL-F5
-    F5_VIP_IP: 192.170.12.220
-    pool_members:
-      - 192.170.10.231
-      - 192.170.10.232
 
   tasks:
+
+    - name: Get Failover State - Module
+      f5networks.f5_modules.bigip_command:
+        commands: show sys failover
+        provider: "{{ provider }}"
+      connection: local
+      register: f5_info
 
     - name: PUSH AS3 Template
       f5networks.f5_bigip.bigip_as3_deploy:
         content: "{{ lookup('template','j2/https.j2', split_lines=False) }}"
+      when:
+      - f5_info.stdout[0].split()[1] |lower == "active"
