--- a/1.0-Observability_Bad_SSL/Observability_Bad_SSL.yaml
+++ b/1.0-Observability_Bad_SSL/Observability_Bad_SSL.yaml
@@ -13,6 +13,16 @@
 
   tasks:
 
+    - name: Setup provider
+      ansible.builtin.set_fact:
+        provider:
+          server: "{{ ansible_host }}"
+          user: "{{ ansible_user }}"
+          password: "{{ ansible_ssh_pass }}"
+          server_port: "443"
+          no_f5_teem: yes
+          validate_certs: false
+
     - name: Get Failover State - Module
       f5networks.f5_modules.bigip_command:
         commands: show sys failover
