--- a/1.0-Observability_Bad_SSL/Observability_Bad_SSL.yaml
+++ b/1.0-Observability_Bad_SSL/Observability_Bad_SSL.yaml
@@ -10,6 +10,7 @@
     ansible_httpapi_validate_certs: no
     ansible_httpapi_port: "443"
     ansible_httpapi_password: "{{ ansible_password }}"
+    ansible_httpapi_use_proxy: false
 
   tasks:
 
