--- a/2.1-Add_WAF_Policy/Add_WAF_Policies.yaml
+++ b/2.1-Add_WAF_Policy/Add_WAF_Policies.yaml
@@ -22,7 +22,7 @@
 
     - name: Wait for Declarative Onboarding Provision to Complete
       ansible.builtin.uri:
-        url: "https://{{ ansible_host }}:{{ server_port }}/mgmt/shared/declarative-onboarding/task/{{ task.task_id }}"
+        url: "https://{{ ansible_host }}/mgmt/shared/declarative-onboarding/task/{{ task.task_id }}"
         method: GET
         return_content: true
         status_code: 200
