--- a/1.1-AS3_SSL_App/AS3_SSL_App.yaml
+++ b/1.1-AS3_SSL_App/AS3_SSL_App.yaml
@@ -20,7 +20,7 @@
         provider:
           server: "{{ ansible_host }}"
           user: "{{ ansible_user }}"
-          password: "{{ ansible_ssh_pass }}"
+          password: "{{ ansible_password }}"
           server_port: "443"
           no_f5_teem: yes
           validate_certs: false
