--- a/2.0-Fix_Bad_SSL/Fix_Bad_SSL.yaml
+++ b/2.0-Fix_Bad_SSL/Fix_Bad_SSL.yaml
@@ -20,7 +20,7 @@
         provider:
           server: "{{ ansible_host }}"
           user: "{{ ansible_user }}"
-          password: "{{ ansible_ssh_pass }}"
+          password: "{{ ansible_password }}"
           server_port: "443"
           no_f5_teem: yes
           validate_certs: false
