--- a/2.1-Add_WAF_Policy/Add_WAF_Policies.yaml
+++ b/2.1-Add_WAF_Policy/Add_WAF_Policies.yaml
@@ -28,7 +28,7 @@
         status_code: 200
         force_basic_auth: true
         user: "{{ ansible_user }}"
-        password: "{{ ansible_ssh_pass }}"
+        password: "{{ ansible_password }}"
         validate_certs: false
       register: atc_DO_status
       until: atc_DO_status is success
@@ -42,7 +42,7 @@
         provider:
           server: "{{ ansible_host }}"
           user: "{{ ansible_user }}"
-          password: "{{ ansible_ssh_pass }}"
+          password: "{{ ansible_password }}"
           server_port: "443"
           no_f5_teem: yes
           validate_certs: false
