--- a/3.1-Fix-Missing_DO/Fix_DO.yaml
+++ b/3.1-Fix-Missing_DO/Fix_DO.yaml
@@ -1,48 +1,38 @@
 ---
-- name: DO Add Self-IP Missing DNS/NTP
-  hosts: lb
+- name: AS3 FIX DO
+  hosts: f5s
   connection: httpapi
   gather_facts: false
 
   vars:
-    ansible_httpapi_password: "{{ ansible_password }}"
     ansible_network_os: f5networks.f5_bigip.bigip
     ansible_httpapi_use_ssl: yes
     ansible_httpapi_validate_certs: no
     ansible_httpapi_port: "443"
+    ansible_httpapi_password: "{{ ansible_password }}"
+    ansible_httpapi_use_proxy: false
+
 
   tasks:
-  
-    - name: Configure F5 via DO with Device Certs
-      ansible.builtin.uri:
-        url: "https://{{ ansible_host }}:{{ f5_admin_port }}/mgmt/shared/declarative-onboarding/declare"
-        method: POST
-        body: "{{ lookup('template','do_configure_deviceCert.j2', split_lines=False) }}"
-        status_code: 202
-        timeout: 300
-        body_format: json
-        force_basic_auth: true
-        user: "{{ f5_user }}"
-        password: "{{ f5_pass }}"
-        validate_certs: false
-      delegate_to: localhost
-      register: do_result_cert
 
-    - name: Wait for DO Task to complete (Certs)
+    - name: Provision ASM/WAF via Declarative Onboarding
+      f5networks.f5_bigip.bigip_do_deploy:
+        content: "{{ lookup('template','j2/do_configure_deviceCert.j2', split_lines=False) }}"
+      register: task
+
+    - name: Wait for Declarative Onboarding Provision to Complete
       ansible.builtin.uri:
-        url: "https://{{ ansible_host }}:{{ f5_admin_port }}/mgmt/shared/declarative-onboarding/task/{{ do_result_cert.json.id }}"
+        url: "https://{{ ansible_host }}/mgmt/shared/declarative-onboarding/task/{{ task.task_id }}"
         method: GET
         return_content: true
         status_code: 200
         force_basic_auth: true
-        user: "{{ f5_user }}"
-        password: "{{ f5_pass }}"
+        user: "{{ ansible_user }}"
+        password: "{{ ansible_password }}"
         validate_certs: false
       register: atc_DO_status
       until: atc_DO_status is success
       retries: 30
-      delay: 30
-      when: 
-      - device_cert_base64 is defined
-      - device_key_base64 is defined
+      delay: 15
       delegate_to: localhost
+      when: task.changed
